<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="fr.iut.taquin.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="top|center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_label_choose"/>

        <RadioGroup android:id="@+id/toggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton android:id="@+id/gridSizeButton2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textOn="@string/size2"
                android:textOff="@string/size2"
                />

            <ToggleButton android:id="@+id/gridSizeButton3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textOn="@string/size3"
                android:textOff="@string/size3"
                android:checked="true"
                />

            <ToggleButton android:id="@+id/gridSizeButton4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textOn="@string/size4"
                android:textOff="@string/size4"
                />
            <ToggleButton android:id="@+id/gridSizeButton5"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textOn="@string/size5"
                android:textOff="@string/size5"
                />
            <ToggleButton android:id="@+id/gridSizeButton6"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textOn="@string/size6"
                android:textOff="@string/size6"
                />
        </RadioGroup>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPageDefaultImages"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="@string/browse"
                android:id="@+id/browseButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:text="@string/random"
                android:id="@+id/randomButton"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlay"
                android:id="@+id/buttonPlay"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonAbout"
                android:id="@+id/buttonAbout"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
